--- a/simias/configure.in
+++ b/simias/configure.in
@@ -583,6 +583,9 @@ src/server/Simias.HttpFile/Makefile
 src/server/Simias.Rss/Makefile
 src/server/Simias.Server/Makefile
 src/server/usercmd/Makefile
+src/server/usercmd/simias-create-user
+src/server/usercmd/simias-delete-user
+src/server/usercmd/simias-user
 src/webservices/Makefile
 src/webservices/AssemblyInfo.cs
 src/webaccess/Makefile
