added simias-create-user simias-delete-user and simias-user
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@6166 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/configure.in
+++ b/configure.in
@@ -583,6 +583,9 @@ src/server/Simias.HttpFile/Makefile
 src/server/Simias.Rss/Makefile
 src/server/Simias.Server/Makefile
 src/server/usercmd/Makefile
+src/server/usercmd/simias-create-user
+src/server/usercmd/simias-delete-user
+src/server/usercmd/simias-user
 src/webservices/Makefile
 src/webservices/AssemblyInfo.cs
 src/webaccess/Makefile
