up'ed the limit to 1GB
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6174 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/Web.config
+++ b/simias/src/webaccess/Web.config
@@ -4,8 +4,8 @@
 	<system.web>
 
     <httpRuntime
-		executionTimeout="180"
-		maxRequestLength="10240"
+		executionTimeout="720"
+		maxRequestLength="1048576"
 	/>
     
     <!--  DYNAMIC DEBUG COMPILATION
