--- a/src/webaccess/Web.config
+++ b/src/webaccess/Web.config
@@ -4,8 +4,8 @@
 	<system.web>
 
     <httpRuntime
-		executionTimeout="180"
-		maxRequestLength="10240"
+		executionTimeout="720"
+		maxRequestLength="1048576"
 	/>
     
     <!--  DYNAMIC DEBUG COMPILATION
