updated configure.in to detect the location of mod_mono.conf and setup our conf files accordingly
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6176 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/setup/apache/ifolder_admin.conf.in
+++ b/simias/src/setup/apache/ifolder_admin.conf.in
@@ -1,4 +1,4 @@
-Include /etc/apache2/mod_mono.conf
+Include @MODMONO_CONFPATH@
 
 Alias /admin "@admindir@"
 AddMonoApplications admin "/admin:@admindir@"
