--- a/simias/src/setup/apache/simias_server.conf.in
+++ b/simias/src/setup/apache/simias_server.conf.in
@@ -1,4 +1,4 @@
-Include /etc/apache2/mod_mono.conf
+Include @MODMONO_CONFPATH@
 
 Alias /simias10 "@webdir@"
 AddMonoApplications simias10 "/simias10:@webdir@"
