--- a/src/setup/apache/ifolder_admin.conf.in
+++ b/src/setup/apache/ifolder_admin.conf.in
@@ -1,4 +1,4 @@
-Include /etc/apache2/mod_mono.conf
+Include @MODMONO_CONFPATH@
 
 Alias /admin "@admindir@"
 AddMonoApplications admin "/admin:@admindir@"
