added Windows script simias-user.cmd
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@6181 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/configure.in
+++ b/configure.in
@@ -608,6 +608,7 @@ src/server/usercmd/Makefile
 src/server/usercmd/simias-create-user
 src/server/usercmd/simias-delete-user
 src/server/usercmd/simias-user
+src/server/usercmd/simias-user.cmd
 src/webservices/Makefile
 src/webservices/AssemblyInfo.cs
 src/webaccess/Makefile
