added Utils.cs to the project
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6187 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Simias.Server/Makefile.am
+++ b/simias/src/server/Simias.Server/Makefile.am
@@ -14,7 +14,8 @@ SimiasServer_CSFILES = \
 	$(srcdir)/Registration.asmx.cs \
 	$(srcdir)/IUserProvider.cs \
 	$(srcdir)/User.cs \
-	$(srcdir)/JournalService.cs
+	$(srcdir)/JournalService.cs \
+	$(srcdir)/Utils.cs
 	
 SimiasServer_CSFILES_CSC := $(subst /,$(SEP),$(SimiasServer_CSFILES))
 SimiasServer_INCLUDES =
