--- a/src/server/Simias.config.in
+++ b/src/server/Simias.config.in
@@ -1,7 +1,7 @@
 <configuration>
   <section name="EnterpriseDomain">
-    <setting name="ServerName" value="Simias Server" />
-    <setting name="Description" value="Simias Enterprise Server" />
+    <setting name="ServerName" value="iFolder Server" />
+    <setting name="Description" value="iFolder Enterprise Server" />
     <setting name="AdminName" value="admin" />
     <setting name="AdminPassword" value="simias" />
   </section>
