Added an if/else clause to allow src/webservices to build in OSX
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6195 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webservices/Makefile.am
+++ b/simias/src/webservices/Makefile.am
@@ -39,8 +39,12 @@ iFolderWebService_CSFILES_CSC := $(subst /,$(SEP),$(iFolderWebService_CSFILES))
 iFolderWebService_INCLUDES =
 iFolderWebService_RESOURCES =
 iFolderWebService_FLAGS = $(CSC_LIBFLAG)
+if LINUX
 iFolderWebService_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasLib.dll SimiasClient.dll Simias.Server.dll
-iFolderWebService_LIBPATH = ../core/SimiasClient ../core/SimiasLib.dll ../server/Simias.Server
+else
+iFolderWebService_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasLib.dll SimiasClient.dll Simias.Server.dll log4net.dll
+endif
+iFolderWebService_LIBPATH = $(LOG4NET_DIR) ../core/SimiasClient ../core/SimiasLib.dll ../server/Simias.Server
 
 EXTRA_DIST =  AssemblyInfo.cs.in $(iFolderWebService_WEBFILES) $(iFolderWebService_CSFILES)
 
