1. misc look improvements 2. add iFolder Details to webservice and webaccess
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6197 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webservices/Makefile.am
+++ b/simias/src/webservices/Makefile.am
@@ -6,6 +6,7 @@ iFolderWebService_CSFILES = \
 	$(srcdir)/iFolderAdmin.asmx.cs \
 	$(srcdir)/iFolderWeb.asmx.cs \
 	$(srcdir)/iFolder.cs \
+	$(srcdir)/iFolderDetails.cs \
 	$(srcdir)/iFolderType.cs \
 	$(srcdir)/iFolderUser.cs \
 	$(srcdir)/iFolderUserDetails.cs \
