Removed UserCmd.exe.config from the EXTRA_DIST line because this file does not exist and caused make package to fail.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6202 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/usercmd/Makefile.am
+++ b/simias/src/server/usercmd/Makefile.am
@@ -24,7 +24,7 @@ else
 	UserCmd_LIBS := $(UserCmd_LIBS1)
 endif
 
-EXTRA_DIST = $(UserCmd_CSFILES) UserCmd.exe.config AssemblyInfo.cs.in simias-create-user.in simias-delete-user.in
+EXTRA_DIST = $(UserCmd_CSFILES) AssemblyInfo.cs.in simias-create-user.in simias-delete-user.in
 
 AssemblyInfo.cs: $(srcdir)/AssemblyInfo.cs.in Makefile
 	sed -e 's,@_VERSION_@,@VERSION@,g' $< > $@
