Added setup to DIST_SUBDIRS so that make package would work correctly.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6203 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Makefile.am
+++ b/simias/src/server/Makefile.am
@@ -1,5 +1,7 @@
 SUBDIRS = Simias.Server Simias.HttpFile Simias.Rss usercmd
 
+DIST_SUBDIRS = $(SUBDIRS) setup
+
 # handle Mono secondary dependencies
 export MONO_PATH := $(MONO_PATH):$(DESTDIR)$(libdir)
 
