--- a/src/server/Makefile.am
+++ b/src/server/Makefile.am
@@ -1,5 +1,7 @@
 SUBDIRS = Simias.Server Simias.HttpFile Simias.Rss usercmd
 
+DIST_SUBDIRS = $(SUBDIRS) setup
+
 # handle Mono secondary dependencies
 export MONO_PATH := $(MONO_PATH):$(DESTDIR)$(libdir)
 
