added an empty Footer (for the future user quota)
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6227 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/Makefile.am
+++ b/simias/src/webaccess/Makefile.am
@@ -8,6 +8,7 @@ iFolderWeb_CSFILES = \
 	$(srcdir)/Entries.aspx.cs \
 	$(srcdir)/Entry.aspx.cs \
 	$(srcdir)/Error.aspx.cs \
+	$(srcdir)/Footer.ascx.cs \
 	$(srcdir)/Global.asax.cs \
 	$(srcdir)/Header.ascx.cs \
 	$(srcdir)/iFolder.aspx.cs \
@@ -58,6 +59,7 @@ iFolderWeb_FORMS = \
 	iFolders.aspx \
 	Login.aspx \
 	Share.aspx \
+	Footer.ascx \
 	Header.ascx \
 	Message.ascx \
 	Pagging.ascx \
