--- a/simias/src/webaccess/iFolderWeb.csproj
+++ b/simias/src/webaccess/iFolderWeb.csproj
@@ -28,7 +28,7 @@
                     BaseAddress = "285212672"
                     CheckForOverflowUnderflow = "false"
                     ConfigurationOverrideFile = ""
-                    DefineConstants = "DEBUG;TRACE"
+                    DefineConstants = "DEBUG;TRACE;TESTING"
                     DocumentationFile = "iFolderWeb.xml"
                     DebugSymbols = "true"
                     FileAlignment = "4096"
@@ -48,7 +48,7 @@
                     BaseAddress = "285212672"
                     CheckForOverflowUnderflow = "false"
                     ConfigurationOverrideFile = ""
-                    DefineConstants = "TRACE"
+                    DefineConstants = "TRACE;TESTING"
                     DocumentationFile = "iFolderWeb.xml"
                     DebugSymbols = "false"
                     FileAlignment = "4096"
