--- a/src/webservices/iFolder.WebService.csproj
+++ b/src/webservices/iFolder.WebService.csproj
@@ -237,6 +237,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "SampleData.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "SearchOperation.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
