--- a/simias/src/setup/apache/Makefile.am
+++ b/simias/src/setup/apache/Makefile.am
@@ -5,11 +5,11 @@ DIST_SUBDIRS = $(SUBDIRS)
 EXTRA_DIST = ifolder_admin.conf.in ifolder_webaccess.conf.in simias_server.conf.in
 
 install-exec-local:
-	$(mkinstalldirs) $(DESTDIR)$(sysconfdir)
-	$(INSTALL_PROGRAM) ifolder_admin.conf ifolder_webaccess.conf simias_server.conf $(DESTDIR)$(sysconfdir)	
+	$(mkinstalldirs) $(DESTDIR)$(simiasconfdir)
+	$(INSTALL_PROGRAM) ifolder_admin.conf ifolder_webaccess.conf simias_server.conf $(DESTDIR)$(simiasconfdir)	
 
 uninstall-local:
-	cd $(DESTDIR)$(sysconfdir); rm -f ifolder_admin.conf ifolder_webaccess.conf simias_server.conf 
+	cd $(DESTDIR)$(simiasconfdir); rm -f ifolder_admin.conf ifolder_webaccess.conf simias_server.conf 
 
 installcheck-summary:
 
