updated with a missed change to not change the prefix except on windows
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6244 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/core/SimiasClient/SimiasSetup.cs.in
+++ b/simias/src/core/SimiasClient/SimiasSetup.cs.in
@@ -62,8 +62,9 @@ namespace Simias.Client
 		static SimiasSetup()
 		{
 			// note: with DotNet with the entry assembly directory as the prefix
-			if (MyEnvironment.DotNet)
-			{
+//			if (MyEnvironment.DotNet)
+//			{
+#if WINDOWS
 				string newprefix = null;
 				
 				try
@@ -83,7 +84,8 @@ namespace Simias.Client
 
 				// assign
 				prefix = newprefix;
-			}
+#endif
+//			}
 		}
 
 		/// <summary>
