Added new SIMIAS_AS_CLIENT AM_CONDITIONAL so we can build different sets of code for the client and server
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6250 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -499,7 +499,7 @@ AC_ARG_WITH(runasclient,
 	[runasclient="FALSE"]
 	)
 AC_SUBST(runasclient)
-
+AM_CONDITIONAL(SIMIAS_AS_CLIENT, test "$runasclient" = "TRUE")
 
 #
 # Handle --with-simiasdatadir
