added a test to create /usr/lib64 directory if installing on x86_64
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6255 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -76,6 +76,7 @@ test $sysconfdir = '${prefix}/etc'			&& sysconfdir="${prefix}/etc"
 test $sharedstatedir = '${prefix}/com'		&& sharedstatedir="${prefix}/com"
 test $localstatedir = '${prefix}/var'		&& localstatedir="${prefix}/var"
 test $libdir = '${exec_prefix}/lib'			&& libdir="${exec_prefix}/lib"
+test $libdir = '${exec_prefix}/lib64'		&& libdir="${exec_prefix}/lib64"
 test $includedir = '${prefix}/include'		&& includedir="${prefix}/include"
 test $oldincludedir = '/usr/include'		&& oldincludedir="/usr/include"
 test $infodir = '${prefix}/info'			&& infodir="${prefix}/info"
